--- a/index.html
+++ b/index.html
@@ -15,22 +15,25 @@
 </head>
 
 <body>
-
     <!--Cabecera-->
-    <div class="cabecera">
-        <div id="contenedor_cabecera">
+    <nav>
+        <div>
+
             <img class="icon" src="img/icon.png" alt="personal logo">
-            <span class="material-icons boton_menu"> menu </span>
-            <nav class="nav" id="togglemenu">
-                <ul>
-                    <li class="nav-items"><a href="#" alt="Inicio" onclick="ToggleMenu()">Inicio</a></li>
-                    <li class="nav-items"><a href="#" alt="Servicios" onclick="ToggleMenu()">Servicios</a></li>
-                    <li class="nav-items"><a href="#" alt="Blog" onclick="ToggleMenu()">Articulos</a></l>
-                    <li class="nav-items"><a href="#" alt="Contacto" onclick="ToggleMenu()">Contacto</a></li>
+            <ul>
+                <li class="nav-items"><a href="#">Home</a></li>
+                <li class="nav-items"><a href="#">Projects</a></li>
+                <li class="nav-items"><a href="#">About</a></l>
+                    <li class="nav-items"><a href="#" alt="Contacto">Contact</a></li>
                 </ul>
-            </nav>
-        </div>
-    </div>
+            </div>
+    </nav>
+    <main>
+     
+
+    </main>
+
+
 
     <!--<div>
         <img src="/img/close.svg" alt="Close Button">
